<resources>
    <string name="app_name">WordHunt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="difficulty">Difficulty</string>
    <string name="score">Score</string>
    <string name="_00_00">00:00</string>
    <string name="multiplier">Multiplier</string>
    <string name="words_to_search_for">Words to search for:</string>
    <string name="your_score">Your Score:</string>
    <string name="time_s_up">Time\'s Up!</string>
    <string name="restart_game">Hraj Znova</string>
    <string name="go_to_main_screen">Vrať sa do hlavnej obrazovky</string>
    <string name="scores">Skóre z posledných hier</string>
    <string name="word_hunt">Word HUNT</string>
    <string name="hraj">Hraj</string>
    <string name="hodnotenie">Hodnotenie</string>
    <string name="koniec">Koniec</string>
    <string name="pozadie">Pozadie</string>
    <string name="zvol_si_obtiaznost">Zvol si obtiažnosť</string>
    <string name="ahk_n_n_as_2_00_n_nsk_re_1_0x">Ľahká\n\nČas: 3:00\n\nSkóre: 1.0x</string>
    <string name="stredna_n_n_as_1_30_n_nsk_re_1_5x">Stredná\n\nČas: 2:30\n\nSkóre: 1.5x</string>
    <string name="a_k_n_n_as_1_00_n_nsk_re_2_0x">Ťažká\n\nČas: 2:00\n\nSkóre: 2.0x</string>
    <string name="pozadie1">Pozadie</string>
</resources>