<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:text="@string/difficulty"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/score"
        android:textSize="24sp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/difficulty_text"
        android:layout_marginTop="-11dp"
        android:background="@drawable/grid_cell_background"
        android:columnCount="10"
        android:rowCount="10">

    </GridLayout>

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/difficulty_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/_00_00"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/score_multiplier_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:text="@string/multiplier"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:id="@+id/word_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:text="@string/words_to_search_for"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

</RelativeLayout>